feat: implement bpmn design audit, pre-flight analysis and task reassignment